test/cli/test-validating-policy/pss-restrict-seccomp-strict/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pss-restrict-seccomp-strict
policies:
- policy.yaml
resources:
- resources.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: restrict-seccomp-strict
  resources:
  - linux-unset
  - linux-pod-unconfined
  - linux-container-unconfined
  - linux-init-unset
  - linux-explicit-os-unset
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: restrict-seccomp-strict
  resources:
  - linux-container-runtime-default
  - linux-pod-runtime-default
  - linux-pod-localhost
  - windows-unset
  result: pass
